# action-test

./: .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml  Ci.yml
app/: main.py
data/: 03.json  03.txt  04.json  04.txt  05.json  06.json  07.json  08.json  09.json  10.json  11.json
tests/: test_app.py  test_main_app.py
